2001-04-09  Sam Steingold  <sds@gnu.org>

	* init.lisp (sys::*home-package*): set to NIL at the end

2001-04-06  Sam Steingold  <sds@gnu.org>

	The grand repackaging: USER+CL-USER; LISP+CL
	* amigasock.lisp, beossock.lisp: no export (done in init.lisp)
	* cfgacorn.lisp, cfgamiga.lisp, cfgdos.lisp, cfgsunux.lisp,
	cfgunix.lisp, cfgwin32.lisp, clhs.lisp: (in-package "EXT")
	* clos.lisp: use I18N temporarily (for ENGLISH)
	* compiler.lisp (c-form-table): treat sys::%flet and friends just
	like cl:flet and friends
	* condition.lisp: moved CLISP extensions, like `muffle-cerrors',
	to the EXT package
	* constobj.d (use_default): set to COMMON-LISP
	* constpack.d: added EXT, I18N, GRAY and CUSTOM,
	and, conditionally, LDAP, SOCKET and GSTREAM
	* constsym.d: moved CLISP extensions to EXT or a more specific
	package, if appropriate
	* control.d, fsubr.d:
	renamed flet->%flet; labels->%labels; macrolet->%macrolet
	* defs1.lisp (doseq, dohash): export from EXT
	(fbound-string): moved to init.lisp
	* defs2.lisp (use-default): COMMON-LISP now
	* defs3.lisp: removed everything except for flet and friends
	* dirkey.d, lisparit.d: fixed comments
	* dirkey.lisp: export everything from LDAP and re-export from EXT
	* dutch.lisp, french.lisp, german.lisp, spanish.lisp: moved to I18N
	* edit.lisp, runprog.lisp, savemem.lisp: export from EXT, not LISP
	* eval.d (FUNTAB): removed `in_package',
	added `pfind_package' and `reexport'
	* foreign1.lisp: use COMMON-LISP and EXT in FFI
	* gray.lisp: extracted from gstream.lisp
	* gstream.lisp: moved to GSTREAM package
	* init.lisp: separated LISP exported symbols into COMMON-LISP and
	EXT (and friends);
	(in-package): define here
	(flet, labels, macrolet): added temporary definitions
	* inspect.lisp: export use variables from CUSTOM
	* keyboard.lisp (with-keyboard, *keyboard-input*): export from EXT
	* loop.lisp: in COMMON-LISP
	* macros1.lisp (mapcap, maplap): export from EXT
	* macros2.lisp (without-floating-point-underflow, space,